--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,15 @@
     <meta name="description" content="Web site created using create-react-app"/>
 
     <!-- my css file -->
-    <link rel="stylesheet" href="asset/css/style.css">
+    <link rel="stylesheet" href="asset/style.css">
 
     <!-- bootstrap css cdn -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <title>Protfolio</title>
+
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="https://kit.fontawesome.com/ed639afcb8.js" crossorigin="anonymous"></script>
     
   </head>
   <body>
