--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,16 @@
     <meta name="description" content="Web site created using create-react-app"/>
 
 
-    <title>Protfolio</title>
+    <title>Ayebidun Ezekiel</title>
 
     <link rel="stylesheet" type="text/css" href="asset/css/style.css"/>
+    <link rel="shortcut icon" href="asset/img/images.jpeg" type="image/x-icon">
 
     <!-- bootstrap css cdn -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;700&display=swap" rel="stylesheet">
 
 
     <script src="https://smtpjs.com/v3/smtp.js"></script>
