--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
 
 
     <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3420165234652690" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
