added image for seo

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app"/>
-
-
-    <title>Ayebidun Ezekiel</title>
+    <meta property="og:image" content="asset/img/profile.png" />
+    <meta name="description" content="Portfolio website by Ezefizzy: A fullstack web developer.">
+    
+    <title> Ayebidun Ezekiel | Software Engineer / Technical Writer </title>
 
     <link rel="stylesheet" type="text/css" href="asset/css/style.css"/>
     <link rel="shortcut icon" href="asset/img/images.jpeg" type="image/x-icon">
