--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta property="og:url" content="asset/img/profile.png" />
+    <meta property="og:image" content="asset/img/profile.PNG" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta property="og:image" content="asset/img/profile.png" />
     <meta name="description" content="Portfolio website by Ezefizzy: A fullstack web developer.">
-    
+
     <title> Ayebidun Ezekiel | Software Engineer / Technical Writer </title>
 
     <link rel="stylesheet" type="text/css" href="asset/css/style.css"/>
