working on the website seo

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta property="og:title" content="Ayebidun Ezekiel | Software Engineer / Technical Writer" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Portfolio website by Ezefizzy: A fullstack web developer." />
+
+    <!-- Include this to make the og:image larger -->
+    <meta name="twitter:card" content="summary_large_image">
+
     <meta property="og:url" content="asset/img/profile.png" />
     <meta property="og:image" content="asset/img/profile.PNG" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
