--- a/public/index.html
+++ b/public/index.html
@@ -2,36 +2,100 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta property="og:title" content="Ayebidun Ezekiel | Software Engineer / Technical Writer" />
-    <meta property="og:type" content="website" />
-    <meta property="og:description" content="Portfolio website by Ezefizzy: A fullstack web developer." />
-
-    <!-- Include this to make the og:image larger -->
-    <meta name="twitter:card" content="summary_large_image">
-
-    <meta property="og:url" content="asset/img/profile.png" />
-    <meta property="og:image" content="asset/img/profile.PNG" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Portfolio website by Ezefizzy: A fullstack web developer.">
 
-    <title> Ayebidun Ezekiel | Software Engineer / Technical Writer </title>
+    <title>Ayebidun Ezekiel | Software Engineer & Technical Writer</title>
 
-    <link rel="stylesheet" type="text/css" href="asset/css/style.css"/>
-    <link rel="shortcut icon" href="asset/img/images.jpeg" type="image/x-icon">
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="Ayebidun Ezekiel is a skilled full-stack developer and technical writer specializing in React, Node.js, and cloud technologies."
+    />
+    <meta
+      name="keywords"
+      content="Fullstack Developer, React, Node.js, Software Engineer, Technical Writer, JavaScript, Web Development"
+    />
+    <meta name="author" content="Ayebidun Ezekiel" />
 
-    <!-- bootstrap css cdn -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;700&display=swap" rel="stylesheet">
+    <!-- Open Graph (OG) Meta Tags for Social Sharing -->
+    <meta
+      property="og:title"
+      content="Ayebidun Ezekiel | Software Engineer & Technical Writer"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:description"
+      content="Explore the portfolio of Ayebidun Ezekiel, a full-stack developer specializing in scalable web applications."
+    />
+    <meta property="og:url" content="https://ezefizzy.vercel.app" />
+    <meta
+      property="og:image"
+      content="https://ezefizzy.vercel.app/assets/img/profile.png"
+    />
 
+    <!-- Twitter Card for better social sharing -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Ayebidun Ezekiel | Software Engineer & Technical Writer"
+    />
+    <meta
+      name="twitter:description"
+      content="Explore the portfolio of Ayebidun Ezekiel, a full-stack developer specializing in scalable web applications."
+    />
+    <meta
+      name="twitter:image"
+      content="https://ezefizzy.vercel.app/assets/img/profile.png"
+    />
 
+    <!-- Favicon -->
+    <link
+      rel="icon"
+      href="https://ezefizzy.vercel.app/assets/img/favicon.ico"
+      type="image/x-icon"
+    />
+
+    <!-- Stylesheets -->
+    <link
+      rel="stylesheet"
+      href="https://ezefizzy.vercel.app/assets/css/style.css"
+    />
+
+    <!-- Bootstrap CSS (CDN) -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Google AdSense -->
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3420165234652690"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- SMTP.js for Contact Forms -->
     <script src="https://smtpjs.com/v3/smtp.js"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3420165234652690" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
 
+    <!-- NoScript Message -->
+    <noscript>
+      <p>
+        This website requires JavaScript to function properly. Please enable
+        JavaScript in your browser settings.
+      </p>
+    </noscript>
   </body>
 </html>
